# kaggle-detect_sleep_states

./: .gitignore  README.md  detect_sleep_states.def  pyproject.toml
.dvc/: config
cmi-dss-source/config/dir/: alpha-singularity.yaml  local.yaml
cmi-dss-source/config/loss/: CrossEntropy.yaml  focal.yaml  focal_mse.yaml  focal_tversky.yaml
cmi-dss-source/src/detect_sleep_states/: model_module.py  train.py
config/: inference.yaml  prepare_data.yaml  train.yaml
config/dataset/: seg.yaml
config/decoder/: UNet1DDecoder.yaml
config/dir/: alpha.yaml  local.yaml  taurus.yaml
config/feature_extractor/: CNNSpectrogram.yaml
config/loss/: BCE.yaml  BCESleep.yaml  focal.yaml
config/model/: Spec2DCNN.yaml  Transformer1D.yaml
config/split/: fold_1.yaml  train_only.yaml
data/raw/: .gitignore  child-mind-institute-detect-sleep-states.zip.dvc  sample_submission.csv.dvc  test_series.parquet.dvc  train_events.csv.dvc  train_series.parquet.dvc
jobs/: feature-extr-large-winsize.sbatch  hopt_extractor_downsample_rate.sbatch  hopt_extractor_fliters.sbatch  hopt_focal_loss-2.sbatch  hopt_focal_loss-3.sbatch  hopt_focal_loss.sbatch  hopt_lr.sbatch  hopt_pp.sbatch  subm-train-1.sbatch
notebooks/: 1-EDA.ipynb  2-predictions-research.ipynb  3-counts.ipynb  4-unworn-intervals.ipynb  5-test.ipynb  6-shuffle.ipynb
scripts/: mlflow_ui_job.sbatch  notebook_job_cpu.sbatch
src/detect_sleep_states/: config.py  data_module.py  inference.py  introspect_model.py  model_module.py  train.py
src/detect_sleep_states/dataset/: centernet.py  common.py  detr.py  seg.py
src/detect_sleep_states/features/: prepare_data.py  prepare_dev.py
(+29 files in other folders)
